# tauri-plugin-webauthn

./: .gitignore  Cargo.toml  build.rs  pnpm-lock.yaml
examples/webauthn/: .env.example  .gitignore  README.md  build-macos-dev.sh  embedded.provisionprofile  pnpm-lock.yaml  setup-dev.sh
examples/webauthn/src-tauri/: Cargo.toml  Entitlements.plist  Entitlements.plist.example  build.rs  tauri.conf.json
examples/webauthn/src-tauri/src/: lib.rs
examples/webauthn/src/routes/: +page.svelte
ios/: Package.swift  README.md
ios/.build/index-build/: build.db  debug.yaml  plugin-tools.yaml  workspace-state.json
ios/.build/index-build/arm64-apple-macosx/debug/: description.json  plugin-tools-description.json
ios/.build/index-build/arm64-apple-macosx/debug/ModuleCache/29VKGLAMLC4GU/: Accessibility-RCJSN2GG3RAR.pcm  ApplicationServices-3NXEUUZF9JJBD.pcm  AuthenticationServices-2XR6F0IJCJ3L9.pcm  CFNetwork-1PNPO1ORVQZLS.pcm  CUPS-1HLHMKUB322XA.pcm  ColorSync-3EIM4S8RXNRVI.pcm  CoreData-1KHK1L2CYC2N6.pcm  CoreFoundation-16SA8WK3L6MQN.pcm  CoreGraphics-1PSDCAYCIV3T9.pcm  CoreImage-39ZO87840M5PP.pcm  CoreText-3FAL1B4J38DIR.pcm  CoreTransferable-27T896KGHFB3R.pcm  CoreVideo-DBBGB2LXU3HG.pcm  DataDetection-R5W4QHNMPWVH.pcm  DeveloperToolsSupport-3SUCMSK9ZS2JA.pcm  DiskArbitration-3LBJF5I58QD8.pcm  Dispatch-R76HXUP80TVL.pcm  IOKit-1IAL9NTK1TABA.pcm  IOSurface-26455DPS9NDS0.pcm  ImageIO-2ZSF831VT29UB.pcm  JavaScriptCore-179YF19M15PYU.pcm  LocalAuthentication-26H9AZG3KEECH.pcm  MachO-20RPYVQSX341K.pcm  Metal-1GCZV9N85NJOH.pcm  Network-25YL5WDWFD9R4.pcm  OSLog-218FBXNFJGY61.pcm  ObjectiveC-1G8H182PQX3QE.pcm  OpenGL-H89XJT7GTCP.pcm  QuartzCore-39A8LQKF980J1.pcm  Security-3QCVXOV25KK54.pcm  SwiftShims-2IMTS4WWRU7VJ.pcm  (+30 more)
ios/.build/index-build/arm64-apple-macosx/debug/Modules/: SwiftRs.swiftdoc  SwiftRs.swiftsourceinfo
ios/.build/index-build/arm64-apple-macosx/debug/SwiftRs.build/: SwiftRs.emit-module.d  lib.d  lib.swiftdeps  lib~partial.swiftmodule  master.priors  output-file-map.json  sources
ios/.build/index-build/arm64-apple-macosx/debug/Tauri.build/: Channel.dia  Tauri.emit-module.d  master.priors  output-file-map.json  sources
ios/.build/index-build/arm64-apple-macosx/debug/tauri_plugin_webauthn.build/: output-file-map.json  sources
ios/.build/index-build/repositories/swift-rs-16819c90/: config  packed-refs
ios/Sources/WebauthnPlugin/: PasskeyHandler.swift  WebauthnPlugin.swift
macos/Sources/WebauthnBridge/: Exports.swift  PasskeyHandler.swift
src/: error.rs  lib.rs
src/authenticators/: macos.rs  mobile.rs  mod.rs
(+195 files in other folders)
