[workspace]
members = ["examples/webauthn/src-tauri"]

[package]
name = "tauri-plugin-webauthn"
version = "0.2.0"
authors = ["profidev"]
description = "a Tauri plugin for WebAuthn"
license = "MIT"
repository = "https://github.com/Profiidev/tauri-plugin-webauthn"
edition = "2021"
rust-version = "1.81"
exclude = [
  "/examples",
  "/dist-js",
  "/guest-js",
  "/node_modules",
  "/.github",
  "/.vscode",
]
links = "tauri-plugin-webauthn"

[dependencies]
tauri = { version = "2.5.0" }
serde = "1.0"
thiserror = "2"
webauthn-rs-proto = "0.5.0"
log = { version = "0.4.27", optional = true }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["sync"] }
base64urlsafedata = "0.5.1"
base64 = "0.22.1"

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }

[target.'cfg(target_os = "macos")'.build-dependencies]
swift-rs = { version = "1.0.5", features = ["build"] }

[features]
default = ["log"]
log = ["dep:log"]

[target.'cfg(not(any(target_os = "android", target_os = "ios", target_os = "windows", target_os = "macos")))'.dependencies]
authenticator = { version = "0.5.0", default-features = false, features = [
  "crypto_openssl",
] }
serde_cbor_2 = "0.13.0"
openssl = "0.10.72"

[target.'cfg(windows)'.dependencies]
webauthn-authenticator-rs = { version = "0.5.0", features = [
  "nfc",
  "usb",
  "win10",
] }
