[package]
name = "webauthn"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "webauthn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-webauthn = { path = "../../../" }
tauri-plugin-log = "2"
webauthn-rs-proto = "0.5.1"
webauthn-rs = { version = "0.5.1", features = ["conditional-ui"] }
tracing = { version = "0.1.41", features = ["log"] }
openssl = { version = "0.10.72", features = ["vendored"] }
chrono = "0.4.41"
log = "0.4.27"
dotenvy = "0.15"
